--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,19 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>
-      Ionic Blank
+      Home Page
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <h1>
+    Hello World!
+  </h1>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    I'm a footer!
+  </ion-toolbar>
+</ion-footer>
