Check in button changes to green and changes to "checked in"

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,9 +7,9 @@
 </ion-header>
 
 <ion-content padding>
-  <h1>
-    Hello World!
-  </h1>
+  <button id="checkIn" (click)="changeColor()">
+    Check in
+  </button>
 </ion-content>
 
 <ion-footer>
