added in queue button

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,6 +10,11 @@
   <button id="checkIn" (click)="changeColor()">
     Check in
   </button>
+
+  <button id="queueIn" (click)="changeQueue()">
+    Queue
+  </button>
+
 </ion-content>
 
 <ion-footer>
