fixed functionality with button link to preceptor page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,11 @@
 
 <ion-content padding>
   <button id="checkIn" (click)="changeColor()">
-    Check in
+    Student
   </button>
 
   <button id="queueIn" (click)="changeQueue()">
-    Queue
+    Preceptor
   </button>
 
 </ion-content>
