--- a/src/pages/queue/queue.html
+++ b/src/pages/queue/queue.html
@@ -12,7 +12,10 @@
     <h2>COMP 124</h2>
     <p>Students:</p>
     <li>
-      David Peletz
+      Raza
+    </li>
+    <li>
+      David
     </li>
     <li>
       Salman
@@ -20,17 +23,14 @@
     <li>
       David 
     </li> 
-    <li>
-      Raza
-    </li>
     <button ion-button secondary menuToggle="">Helped Already</button>
-    <p>
+    <!-- <p>
       Take a look at the <code>src/pages/</code> directory to add or change tabs,
       update any existing page or create new pages.
-    </p>      
+    </p>       -->
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
   </p>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <!-- <button ion-button secondary menuToggle>Toggle Menu</button> -->
 </ion-content>
