crossed out first name in list

--- a/src/pages/queue/queue.html
+++ b/src/pages/queue/queue.html
@@ -11,10 +11,10 @@
   <h3>Preceptor Office Hours</h3>
     <h2 ion-text color="primary">Class: COMP 124</h2>
     <h4 ion-text color="dark">Students In Line:</h4>
-    <div class="boxed">
-        <button ion-button secondary menuToggle="removeDiv()">Check Off</button>
+    <div id ="Raza" class="boxed">
+        <button ion-button secondary (click)="removeDiv()">Check Off</button>
         Raza
-    </div>  
+    </div>
     <div class="boxed">
         <button ion-button secondary menuToggle="">Check Off</button>
         David
