--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,8 +19,54 @@
   </button>
 </ion-content>
 
-<ion-footer>
-  <ion-toolbar>
-    I'm a footer!
-  </ion-toolbar>
-</ion-footer>
+
+<!--<ion-header>
+  <ion-navbar color="primary">
+    <ion-title>
+      Home Page
+    </ion-title>
+  </ion-navbar>
+</ion-header>
+
+<ion-content padding>
+
+  <div id="container">
+
+    <div id="header">
+      <h1> CLASS NAME </h1>
+    </div>
+    <div id="content">
+
+      <div id="nav">
+        <ul>
+          <li>5:30 - 7:30 PM</li>
+          <li>Bret Jackson</li>
+          <li>OLRI 254</li>
+        </ul>
+      </div>
+
+      <div id="main">
+        <ul>
+          <li>TIME:       </li>
+          <li>INSTRUCTOR: </li>
+          <li>LOCATION:   </li>
+        </ul>
+      </div>
+      <button id="checkIn" (click)="changeColor(); increaseEstimate()">
+        Check in
+      </button>
+      <div>
+        <p class="paragraph">Estimated time: <span id="timeEstimate">00:00</span></p>
+      </div>
+
+      <button id="queueIn" (click)="changeQueue()">
+        Preceptor
+      </button>
+
+    </div>
+  </div>
+
+</ion-content> -->
+
+
+
