--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,14 +7,14 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button id="checkIn" (click)="changeColor(); increaseEstimate()">
+  <button id="checkIn" (click)="changeColor(); increaseEstimate()">
     Check in
   </button>
   <div>
     <p class="paragraph">Estimated time: <span id="timeEstimate">00:00</span></p>
   </div>
 
-  <button nav-push="QueuePage" id="queueIn">
+  <button id="queueIn" (click)="changeQueue()">
     Preceptor
   </button>
 </ion-content>
