--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,7 +14,7 @@
     <p class="paragraph">Estimated time: <span id="timeEstimate">00:00</span></p>
   </div>
 
-  <button nav-push="QueuePage" id="queueIn">
+  <button ion-button navPush="QueuePage">
     Preceptor
   </button>
 </ion-content>
