--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,20 +1,16 @@
 <ion-header>
   <ion-navbar color="primary">
     <ion-title>
-      Home Page
+      Home
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <button ion-button id="checkIn" (click)="changeColor(); increaseEstimate()">
-    Check in
+  <button ion-button clear block navPush="StudentCheckInPage">
+    Student
   </button>
-  <div>
-    <p class="paragraph">Estimated time: <span id="timeEstimate">00:00</span></p>
-  </div>
-
-  <button ion-button navPush="QueuePage">
+  <button ion-button clear block navPush="ClassQueuePage">
     Preceptor
   </button>
 </ion-content>
