Added Mac colors

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,16 +1,17 @@
 <ion-header>
-  <ion-navbar color="primary">
+  <ion-navbar color = "macBlue">
     <ion-title>
-      Home
+      Mac TraffIonic
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <button ion-button clear block navPush="StudentCheckInPage">
+  <button ion-button round block color = "macOrange" navPush="StudentCheckInPage">
     Student
   </button>
-  <button ion-button clear block navPush="ClassQueuePage">
+  <br/>
+  <button ion-button round block color = "macOrange" navPush="ClassQueuePage">
     Preceptor
   </button>
 </ion-content>
