--- a/src/pages/student-check-in/student-check-in.html
+++ b/src/pages/student-check-in/student-check-in.html
@@ -7,7 +7,8 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button clear block id="checkIn" (click)="changeColor(); increaseEstimate()">
+  <button ion-button clear block id="checkIn"
+          (click)="changeColor(); increaseEstimate()">
     Check in
   </button>
   <ion-item text-center>
