Adding CourseList functionality. Course interface + component + service

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,10 +7,9 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button round block color = "macOrange" navPush="StudentCheckInPage">
+  <button ion-button round block color = "macOrange" navPush="StudentCoursesPage">
     Student
   </button>
-  <br/>
   <button ion-button round block color = "macOrange" navPush="ClassQueuePage">
     Preceptor
   </button>
