--- a/src/pages/class-queue/class-queue.html
+++ b/src/pages/class-queue/class-queue.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Class</ion-title>
+    <ion-title>Class: COMP 124</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Preceptor Office Hours</h3>
-  <h2 ion-text color="primary">Class: COMP 124</h2>
+  <h2 ion-text color="primary">Current Office Hour - 1:00 pm to 3:00 pm</h2>
   <student-queue></student-queue>
-  <button ion-button full secondary>Check for Available Preceptors!</button>
+  <h2 ion-text color="primary">Upcoming Office Hours</h2>
+  <!-- <button ion-button full secondary>Check for Available Preceptors!</button> -->
 </ion-content>
