Estimated time now reads and updates from database

--- a/src/pages/student-check-in/student-check-in.html
+++ b/src/pages/student-check-in/student-check-in.html
@@ -12,6 +12,6 @@
     Check in
   </button>
   <ion-item text-center>
-    Estimated time: <span id="timeEstimate">{{ this.course.estimatedTime }}</span>
+    Estimated time: <span id="timeEstimate"></span>
   </ion-item>
 </ion-content>
