--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar color = "macBlue">
-    <ion-title>
-      Mac TraffIonic
+    <ion-title align="center">
+    Mac TraffIonic
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -14,6 +14,7 @@
   <button ion-button round block color = "macOrange" navPush="ClassQueuePage">
     Preceptor
   </button>
+
 </ion-content>
 
 
