--- a/src/pages/class-queue/class-queue.html
+++ b/src/pages/class-queue/class-queue.html
@@ -4,7 +4,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding">
   <h2 ion-text color="primary">Current Office Hour - 1:00 pm to 3:00 pm</h2>
   <student-queue></student-queue>
   <h2 ion-text color="primary">Upcoming Office Hours</h2>
