--- a/src/pages/class-queue/class-queue.html
+++ b/src/pages/class-queue/class-queue.html
@@ -1,13 +1,11 @@
 <ion-header>
-  <ion-navbar color="primary">
+  <ion-navbar color="secondary">
     <ion-title>Class: COMP 124</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2 ion-text color="primary">Current Office Hour - 1:00 pm to 3:00 pm</h2>
+  <h2 ion-text align="center" color="primary">Current Office Hour - 1:00 pm to 3:00 pm</h2>
   <student-queue></student-queue>
-  <h2 ion-text color="primary">Upcoming Office Hours</h2>
-  <!-- <officeHourList></officeHourList> -->
-  <!-- <button ion-button full secondary>Check for Available Preceptors!</button> -->
+  <h2 ion-text align="center" color="primary">Upcoming Office Hours</h2>
 </ion-content>
