--- a/src/pages/student-check-in/student-check-in.html
+++ b/src/pages/student-check-in/student-check-in.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="primary">
+  <ion-navbar color="secondary">
     <ion-title>
       {{ course.name }}
     </ion-title>
@@ -7,11 +7,13 @@
 </ion-header>
 
 <ion-content padding>
+  <h2 ion-text align="center" color="primary">Current Office Hour - 1:00 pm to 3:00 pm</h2>
   <button ion-button clear block id="checkIn"
           (click)="changeColor(); increaseEstimate(); addStudent(student)">
     Check in
   </button>
   <ion-item text-center>
     Estimated time: <span id="timeEstimate"></span>
-  </ion-item>
+  </ion-item >
+  <h2 ion-text align="center" color="primary">Upcoming Office Hours</h2>
 </ion-content>
