Added new page and functionality to click on course queue page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,7 +10,7 @@
   <button ion-button round block color = "macOrange" navPush="StudentCoursesPage">
     Student
   </button>
-  <button ion-button round block color = "macOrange" navPush="ClassQueuePage">
+  <button ion-button round block color = "macOrange" navPush="ClassesOfPreceptorPage">
     Preceptor
   </button>
 </ion-content>
