--- a/src/pages/class-queue/class-queue.html
+++ b/src/pages/class-queue/class-queue.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Class: COMP 124</ion-title>
+    <ion-title>Class: {{course.name}}</ion-title>
+    <!-- <ion-title>Class: {{  }} </ion-title> -->
   </ion-navbar>
 </ion-header>
 
