CourseList now accepts nextPage as parameter

--- a/src/pages/student-check-in/student-check-in.html
+++ b/src/pages/student-check-in/student-check-in.html
@@ -8,7 +8,7 @@
 
 <ion-content padding>
   <button ion-button clear block id="checkIn"
-          (click)="changeColor(); increaseEstimate(); addStudent(student)">
+          (click)="changeColor(); increaseEstimate(); addStudent()">
     Check in
   </button>
   <ion-item text-center>
