Student courses page coloring

--- a/src/pages/student-courses/student-courses.html
+++ b/src/pages/student-courses/student-courses.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar color="primary">
+  <ion-navbar color="secondary">
     <ion-title>{{ this.loggedIn.student.name }}'s Courses</ion-title>
   </ion-navbar>
 
