Resolved conflicts. Added shared.module for the the CourseListComponent

--- a/src/pages/classes-of-preceptor/classes-of-preceptor.html
+++ b/src/pages/classes-of-preceptor/classes-of-preceptor.html
@@ -13,7 +13,7 @@
 
 <ion-content padding>
   <!-- <ion-icon name="back"></ion-icon> -->
-  <course-list [courses]="courseList"></course-list>
+  <course-list [courses]="courseList" [nextPage]="'ClassQueuePage'"></course-list>
 
 <!-- <course-list></course-list> -->
 
@@ -21,4 +21,4 @@
   <button ion-button round block color = "macOrange" navPush="ClassQueuePage">COMP 221</button>
   <button ion-button round block color = "macOrange" navPush="ClassQueuePage">MATH 279</button>
   <button ion-button round block color = "macOrange" navPush="ClassQueuePage">COMP 240</button> -->
-</ion-content> 
+</ion-content>
