--- a/src/pages/student-courses/student-courses.html
+++ b/src/pages/student-courses/student-courses.html
@@ -14,4 +14,5 @@
 
 
 <ion-content padding>
+  <course-list [courses]="studentCourses" [nextPage]="'StudentCheckInPage'"></course-list>
 </ion-content>
