Made two circular buttons

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar color = "dullBlue">
     <ion-title align="center">
-      <div class="app-title">Mac TraffIonic</div>
+      <div class="app-title">TraffIonic</div>
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -9,11 +9,11 @@
 
 <ion-content padding>
 
-  <button ion-button round block color = "macOrange" navPush="StudentCoursesPage">
+  <button ion-button class="round-button" round block color = "macOrange" navPush="StudentCoursesPage">
     Student
   </button>
-  <button ion-button round block color = "macOrange" navPush="ClassesOfPreceptorPage">
-    Preceptor
+  <button ion-button class="round-button" round block color = "macOrange" navPush="ClassesOfPreceptorPage">
+    Instructor
   </button>
 
 </ion-content>
