--- a/src/pages/classes-of-preceptor/classes-of-preceptor.html
+++ b/src/pages/classes-of-preceptor/classes-of-preceptor.html
@@ -6,7 +6,7 @@
 -->
 
 <ion-header>
-  <ion-navbar color="primary">
+  <ion-navbar color="secondary">
     <ion-title>Preceptor's Classes: </ion-title>
   </ion-navbar>
 </ion-header>
