Added number and title to Course interface. Edited files that used name instead of number

--- a/src/pages/class-queue/class-queue.html
+++ b/src/pages/class-queue/class-queue.html
@@ -2,7 +2,7 @@
   <!-- <ion-navbar color="primary"> -->
     <!-- <ion-title>Class: {{  }} </ion-title> -->
   <ion-navbar color="secondary">
-      <ion-title>Class: {{course.name}}</ion-title>
+      <ion-title>Class: {{course.number}}</ion-title>
   </ion-navbar>
 </ion-header>
 
