--- a/src/pages/student-check-in/student-check-in.html
+++ b/src/pages/student-check-in/student-check-in.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar color="secondary">
     <ion-title>
-      {{ course.name }}
+      {{ course.number }}
     </ion-title>
   </ion-navbar>
 </ion-header>
