--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,24 @@
 <ion-header>
-  <ion-navbar color = "dullBlue">
-    <ion-title align="center">
-      <div class="app-title">TraffIonic</div>
+  <ion-navbar  class="head" color = "dullBlue">
+    <ion-title class="app-title" align="center">
+      <div id="title">TraffIonic</div>
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="body">
 
-  <button ion-button class="round-button" round block color = "macOrange" navPush="StudentCoursesPage">
+  <ion-card>
+    <ion-card-content>
+      <img src="../../resources/mac_logo.png" alt="">
+    </ion-card-content>
+  </ion-card>
+
+  <button ion-button class="round-button1"  round block color = "macOrange" navPush="StudentCoursesPage">
     Student
   </button>
-  <button ion-button class="round-button" round block color = "macOrange" navPush="ClassesOfPreceptorPage">
+  <button ion-button class="round-button2" round block color = "macOrange" navPush="ClassesOfPreceptorPage">
     Instructor
   </button>
 
