--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,14 +6,12 @@
   </ion-navbar>
 </ion-header>
 
+<!--<img src="img/homePageBG.png">-->
+
 
 <ion-content padding class="body">
 
-  <ion-card>
-    <ion-card-content>
-      <img src="../../resources/mac_logo.png" alt="">
-    </ion-card-content>
-  </ion-card>
+  <img src="assets/imgs/homePageBG.png">
 
   <button ion-button class="round-button1"  round block color = "macOrange" navPush="StudentCoursesPage">
     Student
