--- a/src/pages/student-courses/student-courses.html
+++ b/src/pages/student-courses/student-courses.html
@@ -8,6 +8,11 @@
 
   <ion-navbar color="secondary">
     <ion-title>{{ this.loggedIn.student.name }}'s Courses</ion-title>
+    <ion-buttons end>
+      <button ion-button>
+        <ion-icon name="add" navPush="AddCoursesPage"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
