Fixed non-existent addStudent bug

--- a/src/pages/student-check-in/student-check-in.html
+++ b/src/pages/student-check-in/student-check-in.html
@@ -8,7 +8,7 @@
 
 <ion-content padding>
   <h2 ion-text align="center" color="primary">Current Office Hour - 1:00 pm to 3:00 pm</h2>
-  <button ion-button clear block id="checkIn" (click)="changeColor(); addStudent()">
+  <button ion-button clear block id="checkIn" (click)="changeColor()">
     Check in
   </button>
   <h2 ion-text align="center" color="primary">Upcoming Office Hours</h2>
