--- a/src/pages/class-queue/class-queue.html
+++ b/src/pages/class-queue/class-queue.html
@@ -9,4 +9,7 @@
 <ion-content padding>
   <h2 ion-text align="center" color="primary">Current Office Hour - 1:00 pm to 3:00 pm</h2>
   <h2 ion-text align="center" color="primary">Upcoming Office Hours</h2>
+  <button ion-button [navPush]="'EditHoursPage'" align="center">
+    Edit Office Hours
+  </button>
 </ion-content>
