--- a/src/pages/edit-hours/edit-hours.html
+++ b/src/pages/edit-hours/edit-hours.html
@@ -5,14 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>edit-hours</ion-title>
+    <ion-title>Edit Office Hours</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
-
+  <button ion-button align="center">Add Office Hours</button>  
 </ion-content>
