Added sign out feature
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -13,6 +13,6 @@
 /
 <ion-content padding>
 
-  <profile-view></profile-view>
+  <profile-view (signOutResult)="signOutResult($event)"></profile-view>
 
 </ion-content>
