Changed app theme and touched up home page.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,24 +1,43 @@
+<!--<ion-header>-->
+  <!--<ion-navbar  class="head" color = "dullBlue">-->
+    <!--<ion-title class="app-title" align="center">-->
+      <!--<div id="title">TraffIonic</div>-->
+    <!--</ion-title>-->
+  <!--</ion-navbar>-->
+<!--</ion-header>-->
+
 <ion-header>
-  <ion-navbar  class="head" color = "dullBlue">
-    <ion-title class="app-title" align="center">
-      <div id="title">TraffIonic</div>
-    </ion-title>
-  </ion-navbar>
+  <ion-title class="app-title" align="center">
+    <div id="title">TraffIonic</div>
+  </ion-title>
 </ion-header>
 
-<!--<img src="img/homePageBG.png">-->
 
 
-<ion-content padding class="body">
+<ion-content padding class="body" background>
 
-  <img src="assets/imgs/homePageBG.png">
 
-  <button ion-button class="round-button1"  round block color = "macOrange" navPush="StudentCoursesPage">
-    Student
+  <div class="background">
+
+
+  <!--<ion-item class="background-image">-->
+    <!--<img class="image" src="assets/imgs/homePageBG.png">-->
+  <!--</ion-item>-->
+
+  <!--<img class="image" src="assets/imgs/homePageBG.png">-->
+
+  <!--<img class="image" src>-->
+
+
+  <!--<img class="image">-->
+
+  <button ion-button class="button button1" block navPush="StudentCoursesPage">
+    Login
   </button>
-  <button ion-button class="round-button2" round block color = "macOrange" navPush="ClassesOfPreceptorPage">
-    Instructor
+  <button ion-button class="button button2" block navPush="ClassesOfPreceptorPage">
+    Sign Up
   </button>
+  </div>
 
 </ion-content>
 
