--- a/src/pages/courses/courses.html
+++ b/src/pages/courses/courses.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar color="secondary">
+  <ion-navbar color="chalkboardgreen">
     <ion-title>My Courses</ion-title>
     <ion-buttons end>
       <button ion-button [navPush]="'AddCoursesPage'">
