--- a/src/pages/edit-hours/edit-hours.html
+++ b/src/pages/edit-hours/edit-hours.html
@@ -12,5 +12,6 @@
 
 
 <ion-content padding>
-  <button ion-button align="center">Add Office Hours</button>  
+  <button ion-button align="center">Add Office Hours</button>
+  <edit-hours-form></edit-hours-form>
 </ion-content>
