changed background size

--- a/src/pages/courses/courses.html
+++ b/src/pages/courses/courses.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar class="navBar" color="brown" background>
+  <ion-navbar class="navBar" background>
     <div class="backgroundimage image1">
     <ion-title>My Courses</ion-title>
     <ion-buttons end>
