Set HomePage as RootPage
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,10 +31,10 @@
 
   <!--<img class="image">-->
 
-  <button ion-button class="button button1" block navPush="StudentCoursesPage">
+  <button ion-button class="button button1" block navPush="LoginPage">
     Login
   </button>
-  <button ion-button class="button button2" block navPush="ClassesOfPreceptorPage">
+  <button ion-button class="button button2" block navPush="RegisterPage">
     Sign Up
   </button>
   </div>
