--- a/src/pages/edit-hours/edit-hours.html
+++ b/src/pages/edit-hours/edit-hours.html
@@ -12,5 +12,5 @@
 
 
 <ion-content padding>
-  <edit-hours-form></edit-hours-form>
+  <edit-hours-form [course]="courseKey"></edit-hours-form>
 </ion-content>
