--- a/src/pages/class-queue/class-queue.html
+++ b/src/pages/class-queue/class-queue.html
@@ -7,5 +7,5 @@
 </ion-header>
 
 <ion-content>
-  <course-office-hours></course-office-hours>
+  <course-office-hours [courseKey]="course.key" ></course-office-hours>
 </ion-content>
