Completed student-queue student-view (needs minor edits by Raza): Added check-in and check-out front-end

--- a/src/pages/student-queue/student-queue.html
+++ b/src/pages/student-queue/student-queue.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color = "primary">
-    <ion-title>Student Queue for Class</ion-title>
+    <ion-title>Student Queue</ion-title>
   </ion-navbar>
 
 </ion-header>
