Studen-queue instructor-view front-end completed; right now both queue views are shown, for comparative purposes

--- a/src/pages/student-queue/student-queue.html
+++ b/src/pages/student-queue/student-queue.html
@@ -14,5 +14,8 @@
 
 
 <ion-content padding>
+  <!--If student for the course-->
   <queue-for-students></queue-for-students>
+  <!--If instructor for the course-->
+  <queue-for-instructors></queue-for-instructors>
 </ion-content>
