--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,35 +1,19 @@
-<!--<ion-header>-->
-  <!--<ion-navbar  class="head" color = "dullBlue">-->
-    <!--<ion-title class="app-title" align="center">-->
-      <!--<div id="title">TraffIonic</div>-->
-    <!--</ion-title>-->
-  <!--</ion-navbar>-->
-<!--</ion-header>-->
-
 <ion-header>
-  <ion-title class="app-title" align="center">
+  <ion-navbar class="nav-bar" background>
+    <div class="backgroundimage image1">
+      <ion-title class="app-title" align="center">
     <div id="title">TraffIonic</div>
   </ion-title>
+    </div>
+  </ion-navbar>
+
+
+
 </ion-header>
 
 
 
 <ion-content padding class="body" background>
-
-
-  <div class="background">
-
-
-  <!--<ion-item class="background-image">-->
-    <!--<img class="image" src="assets/imgs/homePageBG.png">-->
-  <!--</ion-item>-->
-
-  <!--<img class="image" src="assets/imgs/homePageBG.png">-->
-
-  <!--<img class="image" src>-->
-
-
-  <!--<img class="image">-->
 
   <button ion-button class="button button1" block navPush="LoginPage">
     Login
@@ -37,9 +21,27 @@
   <button ion-button class="button button2" block navPush="RegisterPage">
     Sign Up
   </button>
-  </div>
 
 </ion-content>
+
+<!--<ion-header>-->
+<!--<ion-navbar  class="head" color = "dullBlue">-->
+<!--<ion-title class="app-title" align="center">-->
+<!--<div id="title">TraffIonic</div>-->
+<!--</ion-title>-->
+<!--</ion-navbar>-->
+<!--</ion-header>-->
+
+<!--<ion-item class="background-image">-->
+<!--<img class="image" src="assets/imgs/homePageBG.png">-->
+<!--</ion-item>-->
+
+<!--<img class="image" src="assets/imgs/homePageBG.png">-->
+
+<!--<img class="image" src>-->
+
+
+<!--<img class="image">-->
 
 
 <!--<ion-header>
