Fixed signup navigation
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,7 +18,7 @@
   <button ion-button class="button button1" block navPush="LoginPage">
     Login
   </button>
-  <button ion-button class="button button2" block navPush="RegisterPage">
+  <button ion-button class="button button2" block navPush="SignUpPage">
     Sign Up
   </button>
 
