working on functionality for checking in a student. the queue now updates with the check in button. working on the functionality with the button on a different page

--- a/src/pages/student-queue/student-queue.html
+++ b/src/pages/student-queue/student-queue.html
@@ -9,6 +9,9 @@
   <ion-navbar color = "primary">
     <ion-title>Student Queue</ion-title>
   </ion-navbar>
+  <!-- <ion-title>
+      {{ course.number }}
+  </ion-title> -->
 
 </ion-header>
 
@@ -18,4 +21,7 @@
   <queue-for-students></queue-for-students>
   <!--If instructor for the course-->
   <queue-for-instructors></queue-for-instructors>
+  <button ion-button clear block id="checkIn" (click)="changeColor()" (click)="addStudent(profile, 1, course)">
+      Check in
+  </button>
 </ion-content>
