Began global theming. Commented out code from individual pages scss files and began coding in app.scss

--- a/src/pages/courses/courses.html
+++ b/src/pages/courses/courses.html
@@ -6,8 +6,8 @@
         <div id="title">My Courses</div>
       </ion-title>
     <ion-buttons class="addbuttons" end>
-      <button ion-button  [navPush]="'AddCoursesPage'">
-        <ion-icon id="addbutton" name="add"></ion-icon>
+      <button class="addbutton" ion-button  [navPush]="'AddCoursesPage'">
+        <ion-icon  name="add"></ion-icon>
       </button>
     </ion-buttons>
     </div>
