Some scss fixes
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/pages/add-courses/add-courses.html
+++ b/src/pages/add-courses/add-courses.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar color="secondary">
+  <ion-navbar>
     <ion-title>Add Courses</ion-title>
     <ion-buttons end>
       <button ion-button (click)="saveCourses()">
