--- a/src/pages/class-queue/class-queue.html
+++ b/src/pages/class-queue/class-queue.html
@@ -1,8 +1,8 @@
 <ion-header>
   <!-- <ion-navbar color="primary"> -->
     <!-- <ion-title>Class: {{  }} </ion-title> -->
-  <ion-navbar color="secondary">
-      <ion-title>Class: {{course.number}}</ion-title>
+  <ion-navbar>
+      <ion-title>{{course.number}}</ion-title>
   </ion-navbar>
 </ion-header>
 
