--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar color="secondary">
+  <ion-navbar>
     <ion-title>Profile</ion-title>
     <ion-buttons end>
       <button ion-button
@@ -10,7 +10,7 @@
   </ion-navbar>
 
 </ion-header>
-/
+
 <ion-content padding>
 
   <profile-view (signOutResult)="signOutResult($event)"></profile-view>
