Tabs disappear on subpages
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
 <ion-tabs>
-  <ion-tab [root]="tab1" tabIcon="bookmarks"></ion-tab>
-  <ion-tab [root]="tab2" tabIcon="person"></ion-tab>
+  <ion-tab [root]="tab1" [tabsHideOnSubPages]="true" tabIcon="bookmarks"></ion-tab>
+  <ion-tab [root]="tab2" [tabsHideOnSubPages]="true" tabIcon="person"></ion-tab>
 </ion-tabs>
