--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,78 +17,7 @@
     </button>
   </div>
 
-  <button ion-button block color="danger" (click)="loginUser()" *ngIf="!userProfile">
+  <button ion-button (click)="loginUser()" *ngIf="!userProfile">
     <ion-icon name="logo-googleplus"></ion-icon>
   </button>
 </ion-content>
-
-<!--<ion-header>-->
-<!--<ion-navbar  class="head" color = "dullBlue">-->
-<!--<ion-title class="app-title" align="center">-->
-<!--<div id="title">TraffIonic</div>-->
-<!--</ion-title>-->
-<!--</ion-navbar>-->
-<!--</ion-header>-->
-
-<!--<ion-item class="background-image">-->
-<!--<img class="image" src="assets/imgs/homePageBG.png">-->
-<!--</ion-item>-->
-
-<!--<img class="image" src="assets/imgs/homePageBG.png">-->
-
-<!--<img class="image" src>-->
-
-
-<!--<img class="image">-->
-
-
-<!--<ion-header>
-  <ion-navbar color="primary">
-    <ion-title>
-      Home Page
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-
-  <div id="container">
-
-    <div id="header">
-      <h1> CLASS NAME </h1>
-    </div>
-    <div id="content">
-
-      <div id="nav">
-        <ul>
-          <li>5:30 - 7:30 PM</li>
-          <li>Bret Jackson</li>
-          <li>OLRI 254</li>
-        </ul>
-      </div>
-
-      <div id="main">
-        <ul>
-          <li>TIME:       </li>
-          <li>INSTRUCTOR: </li>
-          <li>LOCATION:   </li>
-        </ul>
-      </div>
-      <button id="checkIn" (click)="changeColor(); increaseEstimate()">
-        Check in
-      </button>
-      <div>
-        <p class="paragraph">Estimated time: <span id="timeEstimate">00:00</span></p>
-      </div>
-
-      <button id="queueIn" (click)="changeQueue()">
-        Preceptor
-      </button>
-
-    </div>
-  </div>
-
-</ion-content> -->
-
-
-
