Working on adding students to Queue

--- a/src/pages/student-check-in/student-check-in.html
+++ b/src/pages/student-check-in/student-check-in.html
@@ -15,9 +15,9 @@
           <button ion-button padding clear small [navPush]="'StudentQueuePage'">
             Ends at 4:30 pm
           </button>
-          <button ion-button clear block id="checkIn" (click)="changeColor()" (click)="addStudent(profile, 1, course)">
+          <!-- <button ion-button clear block id="checkIn" (click)="changeColor()" (click)="addStudent(profile, 1, course)">
               Check in
-          </button>        
+          </button>         -->
         </ion-card-content>
       </ion-card>
       
