--- a/src/pages/student-queue/student-queue.html
+++ b/src/pages/student-queue/student-queue.html
@@ -19,9 +19,8 @@
 <ion-content padding>
   <!--If student for the course-->
   <queue-for-students></queue-for-students>
+  <!-- <queue-for-students></queue-for-students> -->
   <!--If instructor for the course-->
   <queue-for-instructors></queue-for-instructors>
-  <button ion-button clear block id="checkIn" (click)="changeColor()" (click)="addStudent(profile, 1, course)">
-      Check in
-  </button>
+  <!-- <queue-for-instructors></queue-for-instructors> -->
 </ion-content>
