Resized homepage buttons, changed their font, alignment and added a border in between the two buttons

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,11 @@
 
 <ion-content padding>
   <div class="homeButtons">
-    <button navPush="LoginPage">
+    <button class="log-in" navPush="LoginPage">
       Login
     </button>
     <br>
-    <button navPush="SignUpPage">
+    <button class="sign-up" navPush="SignUpPage">
       Sign Up
     </button>
   </div>
