--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-img class="logoImage" src="../assets/imgs/homePageLogo.png"></ion-img>
   <div class="homeButtons">
     <button class="log-in" navPush="LoginPage">
       Login
