--- a/src/pages/student-queue/student-queue.html
+++ b/src/pages/student-queue/student-queue.html
@@ -7,18 +7,18 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Student Queue</ion-title>
+    <ion-title>Student Queue </ion-title>
   </ion-navbar>
-  <!-- <ion-title>
-      {{ course.number }}
-  </ion-title> -->
 
-</ion-header>
+  <!-- <ion-title>
+          {{ course.number }}  
+  </ion-title> -->
+</ion-header> 
 
 
 <ion-content padding>
   <!--If student for the course-->
-  <queue-for-students></queue-for-students>
+  <queue-for-students [course]="course"></queue-for-students>
   <!-- <queue-for-students></queue-for-students> -->
   <!--If instructor for the course-->
   <queue-for-instructors></queue-for-instructors>
