--- a/src/pages/edit-hours/edit-hours.html
+++ b/src/pages/edit-hours/edit-hours.html
@@ -1,15 +1,9 @@
-<!--
-  Generated template for the EditHoursPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
-    <ion-title>Edit Office Hours</ion-title>
+    <ion-title>{{ course.number }}</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <edit-hours-form [courseKey]="courseKey"></edit-hours-form>
+  <edit-hours-form [courseKey]="course.key"></edit-hours-form>
 </ion-content>
