Office hours list now sorted according to date. All office hours implementation is complete
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/pages/edit-hours/edit-hours.html
+++ b/src/pages/edit-hours/edit-hours.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>{{ course.number }}</ion-title>
+    <ion-title>{{ course?.number }}</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <edit-hours-form [courseKey]="course.key"></edit-hours-form>
+  <edit-hours-form *ngIf="ready" [courseKey]="course.key" [officeHoursList]="officeHoursList"></edit-hours-form>
 </ion-content>
