--- a/src/pages/class-queue/class-queue.html
+++ b/src/pages/class-queue/class-queue.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content>
-  <course-office-hours [course]="course" ></course-office-hours>
+  <course-office-hours *ngIf="ready" [course]="course" [officeHoursList]="officeHoursList"></course-office-hours>
 </ion-content>
