working on studentQueue updates

--- a/src/pages/student-queue/student-queue.html
+++ b/src/pages/student-queue/student-queue.html
@@ -21,6 +21,6 @@
   <queue-for-students [course]="course"></queue-for-students>
   <!-- <queue-for-students></queue-for-students> -->
   <!--If instructor for the course-->
-  <queue-for-instructors></queue-for-instructors>
+  <queue-for-instructors [course]="course"></queue-for-instructors>
   <!-- <queue-for-instructors></queue-for-instructors> -->
 </ion-content>
