--- a/src/pages/edit-hours/edit-hours.html
+++ b/src/pages/edit-hours/edit-hours.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content padding>
-  <edit-hours-form *ngIf="ready" [courseKey]="course.key" [officeHoursList]="officeHoursList"></edit-hours-form>
+  <edit-hours-form [courseKey]="course.key" [officeHoursList]="officeHoursList"></edit-hours-form>
 </ion-content>
