Completed navigation to StudentQueue
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/pages/office-hours/office-hours.html
+++ b/src/pages/office-hours/office-hours.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <office-hours-list *ngIf="ready" [officeHoursList]="officeHoursList"></office-hours-list>
+  <office-hours-list *ngIf="ready" [officeHoursList]="officeHoursList" [course]="course"></office-hours-list>
 
   <!--If instructor for the class-->
   <ion-card *ngIf="isInstructing">
