list of students in queue now updates when a student enters the list or is removed from the list

--- a/src/pages/student-queue/student-queue.html
+++ b/src/pages/student-queue/student-queue.html
@@ -18,9 +18,9 @@
 
 <ion-content padding>
   <!--If student for the course-->
-  <queue-for-students [course]="course"></queue-for-students>
+  <queue-for-students [course]="course" [studentQueue]="studentQueue" [officeHourIndex]="officeHourIndex"></queue-for-students>
   <!-- <queue-for-students></queue-for-students> -->
   <!--If instructor for the course-->
-  <queue-for-instructors [course]="course"></queue-for-instructors>
+  <queue-for-instructors [course]="course" [studentQueue]="studentQueue" [officeHourIndex]="officeHourIndex"></queue-for-instructors>
   <!-- <queue-for-instructors></queue-for-instructors> -->
 </ion-content>
