Office hours displays correctly in every instance
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/pages/office-hours/office-hours.html
+++ b/src/pages/office-hours/office-hours.html
@@ -5,9 +5,8 @@
 </ion-header>
 
 <ion-content>
-  <office-hours-list *ngIf="ready" [officeHoursList]="officeHoursList" [course]="course"></office-hours-list>
+  <office-hours-list *ngIf="officeHoursList" [instructing]="instructing" [officeHoursList]="officeHoursList" [course]="course"></office-hours-list>
 
-  <!--If instructor for the class-->
   <ion-card *ngIf="isInstructing">
     <ion-card-header [navPush]="'EditHoursPage'" [navParams]="{course: course, officeHoursList: officeHoursList}">
       Edit Office Hours
