Fixing up office hours form
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/pages/office-hours/office-hours.html
+++ b/src/pages/office-hours/office-hours.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <office-hours-list *ngIf="officeHoursList" [instructing]="instructing" [officeHoursList]="officeHoursList" [course]="course"></office-hours-list>
+  <office-hours-list *ngIf="officeHoursList" [officeHoursList]="officeHoursList" [course]="course"></office-hours-list>
 
   <ion-card *ngIf="isInstructing">
     <ion-card-header [navPush]="'EditHoursPage'" [navParams]="{course: course, officeHoursList: officeHoursList}">
