Student queue adding, removing updating and reordering implemented
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/pages/courses/courses.html
+++ b/src/pages/courses/courses.html
@@ -14,5 +14,5 @@
 </ion-header>
 
 <ion-content padding>
-  <course-list class="transparent" [courseList]="studentCourses"></course-list>
+  <course-list class="transparent" [courseList]="courseList"></course-list>
 </ion-content>
