--- a/src/pages/student-queue/student-queue.html
+++ b/src/pages/student-queue/student-queue.html
@@ -1,26 +1,12 @@
-<!--
-  Generated template for the StudentQueuePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Student Queue </ion-title>
+    <ion-title>{{ course.number }} Queue</ion-title>
   </ion-navbar>
-
-  <!-- <ion-title>
-          {{ course.number }}
-  </ion-title> -->
 </ion-header>
 
 
 <ion-content padding>
-  <!--If student for the course-->
-  <queue-for-students [course]="course" [studentQueue]="studentQueue" [officeHourIndex]="officeHourIndex"></queue-for-students>
-  <!-- <queue-for-students></queue-for-students> -->
-  <!--If instructor for the course-->
-  <queue-for-instructors [course]="course" [studentQueue]="studentQueue" [officeHourIndex]="officeHourIndex"></queue-for-instructors>
-  <!-- <queue-for-instructors></queue-for-instructors> -->
+  <queue-for-students *ngIf="studentQueue && !officeHours.instructing && course" [course]="course" [studentQueue]="studentQueue"></queue-for-students>
+  <queue-for-instructors *ngIf="studentQueue  && officeHours.instructing" [studentQueue]="studentQueue"></queue-for-instructors>
 </ion-content>
