--- a/src/pages/courses/courses.html
+++ b/src/pages/courses/courses.html
@@ -14,5 +14,5 @@
 </ion-header>
 
 <ion-content padding>
-  <course-list class="transparent" [courseList]="courseList"></course-list>
+  <course-list class="transparent" *ngIf="courseList?.length > 0" [courseList]="courseList"></course-list>
 </ion-content>
